# image-anomaly-lab

./: .gitignore  README.md  STUDY_GUIDE.md  pyproject.toml  requirements-app.txt  requirements-core.txt  requirements-torch-rocm.txt
app/: streamlit_app.py
docs/: GUIA_ANOMALIA.md
notebooks/: estudo_deteccao_defeito.ipynb
scripts/: compare.py  download_data.py  fit_memory_bank.py  train_autoencoder.py
src/image_anomaly_lab/: __init__.py  backbones.py  config.py  data.py  devices.py  evaluation.py  results.py
src/image_anomaly_lab/detectors/: __init__.py  autoencoder.py  memory_bank.py
tests/: test_data.py  test_evaluation.py  test_memory_bank.py
